# OpenGL-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine v0.01.sln
engine v0.01/: App.cpp  App.h  ColorFragment.fs  Renderer.cpp  Renderer.h  ResourceHolder.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.h  engine v0.01.vcxproj  engine v0.01.vcxproj.filters  main.cpp
engine v0.01/App/: App.cpp  App.h
engine v0.01/Camera/: Camera.cpp  Camera.h
engine v0.01/Clock/: Clock.cpp  Clock.h
engine v0.01/Entity/: Entity.cpp  Entity.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
engine v0.01/Input/: KeyInput.h
engine v0.01/Renderer/: DrawRequest.cpp  DrawRequest.h  RenderInfo.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h
engine v0.01/ResourceManager/: ResourceHolder.cpp  ResourceManager.h
engine v0.01/Shader/: ColorVertex.vs  Shader.cpp  Shader.h  TextureFragment.fs  TextureVertex.vs
engine v0.01/Texture/: Texture.cpp  Texture.h
src/: main.cpp
src/App/: App.cpp  App.h
src/Camera/: Camera.cpp  Camera.h
src/Clock/: Clock.h
src/Entity/: Entity.cpp  Entity.h
src/Input/: KeyInput.cpp  KeyInput.h
src/OBJLoader/: OBJLoader.cpp  OBJLoader.h
src/Renderer/: RenderInfo.cpp  RenderInfo.h  Renderer.cpp  Renderer.h
src/ResourceManager/: ResourceHolder.h  ResourceManager.h
src/Sample/: sample_triangle.cpp  sample_triangle.h
src/Shader/: ColorFragment.fs  ColorVertex.vs  Shader.cpp  Shader.h  TextureFragment.fs
src/Texture/: Texture.cpp  Texture.h
